fix: grid gap

--- a/css/style.css
+++ b/css/style.css
@@ -1386,7 +1386,8 @@ template {
   -ms-grid-columns: (minmax(min-content, 1fr))[4];
       grid-template-columns: repeat(4, minmax(-webkit-min-content, 1fr));
       grid-template-columns: repeat(4, minmax(min-content, 1fr));
-  grid-gap: 25px;
+  grid-row-gap: 25px;
+  grid-column-gap: 117px;
   grid-auto-rows: minmax(40px, -webkit-min-content);
   grid-auto-rows: minmax(40px, min-content);
   -webkit-box-align: start;
@@ -1397,11 +1398,14 @@ template {
 .footer__logo {
   width: 166px;
   -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  grid-row: 1/3;
-  -ms-flex-item-align: stretch;
-      -ms-grid-row-align: stretch;
-      align-self: stretch;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  height: 192px;
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 
 .footer__categories {
@@ -1734,7 +1738,8 @@ template {
   .footer-wrapper {
     -ms-grid-columns: (1fr)[6];
         grid-template-columns: repeat(6, 1fr);
-    grid-row-gap: 60px;
+    grid-row-gap: 40px;
+    grid-column-gap: 51px;
   }
   .footer__logo {
     -ms-grid-row: 1;
@@ -1930,6 +1935,9 @@ template {
   }
   .unwrapped-card-info {
     padding: 25px 21px 30px 27px;
+  }
+  .footer-wrapper {
+    grid-column-gap: 0;
   }
 }
 
