--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -91,7 +91,8 @@
             flex-basis: 49%
         &-wrapper
             grid-template-columns: repeat(6, 1fr)
-            grid-row-gap: 60px
+            grid-row-gap: 40px
+            grid-column-gap: 51px
         &__logo
             grid-row: 1/2
             grid-column: span 2
@@ -223,6 +224,9 @@
         &-card
             &-info
                 padding: 25px 21px 30px 27px 
+    .footer
+        &-wrapper
+            grid-column-gap: 0
                    
 @media ( max-width:694px)
     .reviews
