--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -6,13 +6,16 @@
     &-wrapper
         display: grid
         grid-template-columns: repeat(4, minmax(min-content, 1fr))
-        grid-gap: 25px
+        grid-row-gap: 25px
+        grid-column-gap: 117px
         grid-auto-rows: minmax(40px, min-content)
         align-items: start
     &__logo
         width: 166px
-        grid-row: 1/3
-        align-self: stretch
+        grid-row: 1/2
+        align-self: center
+        height: 192px
+        object-fit: fill
     &__categories
         grid-row: 1/4
     &__social
@@ -63,6 +66,7 @@
         &--mb-2
             margin-bottom: 20px
     &__icon
+        
         &-wrapper
             min-width: 40px
     &__text
@@ -112,6 +116,7 @@
         grid-row: 6/7
         display: grid
         grid-template-columns: repeat(3, 1fr)
+        
         &__text
             font-style: normal;
             font-weight: normal;
